hphp/hack/test/typecheck/nameof/parsing/nameof_is.php.exp
File "nameof_is.php", line 5, characters 12-22:
`nameof` can only be used with a class (Parsing[1002])
