hphp/hack/test/typecheck/nameof/parsing/nameof_is.php
<?hh

class C {
  public static function f(): void {
    nameof C is string;
  }
}
